--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-   "name": "@ponderware/mooncatsinfo",
-   "version": "3.2.0",
+   "name": "mooncatsinfo",
+   "version": "1.1.0",
    "description": "MoonCat aggregation server for MoonCatRescue",
    "main": "index.js",
    "scripts": {
